--- a/META.yml
+++ b/META.yml
@@ -1,18 +1,20 @@
 ---
 name: CEDict-Pinyin
-version: 0.01000
+version: 0.01001
 author:
   - Christopher Davaz         www.chrisdavaz.com          cdavaz@gmail.com
 abstract: Validates pinyin strings
 license: perl
 resources:
   license: http://dev.perl.org/licenses/
+requires:
+  Class::Light: 0.01000
 build_requires:
   Test::More: 0
 provides:
   CEDict::Pinyin:
     file: lib/CEDict/Pinyin.pm
-    version: 0.01000
+    version: 0.01001
 generated_by: Module::Build version 0.280801
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
