--- a/META.yml
+++ b/META.yml
@@ -1,21 +1,20 @@
----
-name: CEDict-Pinyin
-version: 0.02000
-author:
-  - Christopher Davaz         www.chrisdavaz.com          cdavaz@gmail.com
-abstract: Validates pinyin strings
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
+--- #YAML:1.0
+name:               CEDict-Pinyin
+version:            0.02003
+abstract:           ~
+author:  []
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-  Class::Light: 0.01000
-build_requires:
-  Test::More: 0
-provides:
-  CEDict::Pinyin:
-    file: lib/CEDict/Pinyin.pm
-    version: 0.02000
-generated_by: Module::Build version 0.280801
+    Class::Light:  0.01002
+    Test::More:    0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.48
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
